Added the sun.security.provider=ALL-UNAMED and security.util=ALL-UNAMED to resolve java issue