@@ -11,4 +11,6 @@ keytool -importkeystore -srckeystore /certs/$DESTSTOREFILE.p12 -srcstoretype PKC
 	-provider org.bouncycastle.jcajce.provider.BouncyCastleFipsProvider \
 	-providerpath /opt/keycloak/providers/bc-fips-1.0.2.3.jar \
 	-J-Djava.security.properties=/usr/lib/jvm/jre-17-openjdk/conf/security/java.security \
+	-J--add-exports=java.base/sun.security.provider=ALL-UNNAMED \
+        -J--add-opens=java.base/sun.security.util=ALL-UNNAMED \
 	-providername BCFIPS
